# fastapi-template

./: .dockerignore  Dockerfile  dev-requirements.txt  pyproject.toml  requirements.txt  routes.rest
api/: dependencies.py  main.py
api/models/: Players.py
api/routes/: matches.py  players.py
